adding desc and map_path

--- a/sr_hand_config/634/general_info.yaml
+++ b/sr_hand_config/634/general_info.yaml
@@ -1,4 +1,10 @@
 side: 'right'
-type: 'hand_e'
+type: 'hand_e_plus'
 name: 'demohand_A'
 biotac: false
+robot_description:
+  package_name: sr_description
+  relative_path: robots/shadowhand_motor_plus.urdf.xacro
+mapping_path:
+  package_name: sr_edc_launch
+  relative_path: mappings/default_mappings/rh_E_v3.yaml
