--- a/sr_hand_config/package.xml
+++ b/sr_hand_config/package.xml
@@ -5,9 +5,10 @@
   <description>The sr_hand_config package</description>
   <maintainer email="software@shadowrobot.com">Shadow Robot Software Team</maintainer>
   <license>GPLv2</license>
+
   <buildtool_depend>catkin</buildtool_depend>
 
+  <!-- The export tag contains other, unspecified, tags -->
   <export>
-
   </export>
 </package>
