--- a/sr_hand_config/4106/general_info.yaml
+++ b/sr_hand_config/4106/general_info.yaml
@@ -1,7 +1,7 @@
 side: 'left'
 type: 'hand_e'
-name: 'demohand_E'
+name: 'demohand_D'
 biotac: false
 mapping_path:
   package_name: sr_edc_launch
-  relative_path: mappings/default_mappings/lh_E_v4.yaml
+  relative_path: mappings/default_mappings/rh_E_v3.yaml
