--- a/sr_hand_config/common/placeholder.yaml
+++ b/sr_hand_config/common/placeholder.yaml
@@ -1,1 +1,1 @@
-# Delete this file ones other files start appearing in this folder
+# Delete this file once other files start appearing in this folder
