--- a/sr_hand_config/4714/general_info.yaml
+++ b/sr_hand_config/4714/general_info.yaml
@@ -1,6 +1,6 @@
 side: 'left'
 type: 'hand_e'
-name: 'shadowrobot_210312_noetic'
+name: 'shadowrobot_210312'
 biotac: false
 mapping_path:
   package_name: sr_edc_launch
