--- a/sr_hand_config/114/general_info.yaml
+++ b/sr_hand_config/114/general_info.yaml
@@ -1,6 +1,6 @@
 side: 'left'
 type: 'hand_e'
-name: 'phantomhand_B'
+name: 'phantomhand_004'
 biotac: false
 mapping_path:
   package_name: sr_edc_launch
