--- a/sr_hand_config/common/config/diagnostic_analyzer_lite.yaml
+++ b/sr_hand_config/common/config/diagnostic_analyzer_lite.yaml
@@ -43,3 +43,9 @@ analyzers:
         timeout: 5.0
         regex: '([^\s]+) SRDMotor .*THJ[0-9].*'
         num_items: 4
+      EtherCAT_slaves:
+        type: diagnostic_aggregator/GenericAnalyzer
+        path: EtherCAT Slaves
+        timeout: 5.0
+        regex: ['SRBridge.*', '([^\s]+) EtherCAT Dual CAN Palm']
+        num_items: 2
