updating phantom hands

--- a/sr_hand_config/113/controls/host/pwm/sr_edc_joint_position_controllers_PWM.yaml
+++ b/sr_hand_config/113/controls/host/pwm/sr_edc_joint_position_controllers_PWM.yaml
@@ -1,5 +1,5 @@
-sh_lh_ffj0_position_controller:
-  joint: lh_FFJ0
+sh_rh_ffj0_position_controller:
+  joint: rh_FFJ0
   pid:
     d: -50.0
     deadband: 0
@@ -9,9 +9,9 @@ sh_lh_ffj0_position_controller:
     max_force: 600.0
     p: -7100.0
     position_deadband: 0.002
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_ffj3_position_controller:
-  joint: lh_FFJ3
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_ffj3_position_controller:
+  joint: rh_FFJ3
   pid:
     d: 280.0
     deadband: 0.0
@@ -21,9 +21,9 @@ sh_lh_ffj3_position_controller:
     max_force: 600.0
     p: 5900.0
     position_deadband: 0.002
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_ffj4_position_controller:
-  joint: lh_FFJ4
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_ffj4_position_controller:
+  joint: rh_FFJ4
   pid:
     d: 310.0
     deadband: 0.02
@@ -33,9 +33,9 @@ sh_lh_ffj4_position_controller:
     max_force: 500.0
     p: 7100.0
     position_deadband: 0.003
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_lfj0_position_controller:
-  joint: lh_LFJ0
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_lfj0_position_controller:
+  joint: rh_LFJ0
   pid:
     d: 50.0
     friction_deadband: 2000.0
@@ -44,9 +44,9 @@ sh_lh_lfj0_position_controller:
     max_force: 600.0
     p: 7100.0
     position_deadband: 0.002
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_lfj3_position_controller:
-  joint: lh_LFJ3
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_lfj3_position_controller:
+  joint: rh_LFJ3
   pid:
     d: -270.0
     deadband: 0.0
@@ -56,9 +56,9 @@ sh_lh_lfj3_position_controller:
     max_force: 600.0
     p: -5900.0
     position_deadband: 0.002
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_lfj4_position_controller:
-  joint: lh_LFJ4
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_lfj4_position_controller:
+  joint: rh_LFJ4
   pid:
     d: -310.0
     deadband: 0
@@ -68,9 +68,9 @@ sh_lh_lfj4_position_controller:
     max_force: 500.0
     p: -7100.0
     position_deadband: 0.003
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_lfj5_position_controller:
-  joint: lh_LFJ5
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_lfj5_position_controller:
+  joint: rh_LFJ5
   pid:
     d: -290.0
     deadband: 0.0
@@ -80,9 +80,9 @@ sh_lh_lfj5_position_controller:
     max_force: 500.0
     p: -6900.0
     position_deadband: 0.003
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_mfj0_position_controller:
-  joint: lh_MFJ0
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_mfj0_position_controller:
+  joint: rh_MFJ0
   pid:
     d: -50.0
     friction_deadband: 2000.0
@@ -91,9 +91,9 @@ sh_lh_mfj0_position_controller:
     max_force: 600.0
     p: -7100.0
     position_deadband: 0.002
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_mfj3_position_controller:
-  joint: lh_MFJ3
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_mfj3_position_controller:
+  joint: rh_MFJ3
   pid:
     d: -280.0
     deadband: 0.0
@@ -103,9 +103,9 @@ sh_lh_mfj3_position_controller:
     max_force: 600.0
     p: -5900.0
     position_deadband: 0.002
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_mfj4_position_controller:
-  joint: lh_MFJ4
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_mfj4_position_controller:
+  joint: rh_MFJ4
   pid:
     d: -310.0
     deadband: 0
@@ -115,9 +115,9 @@ sh_lh_mfj4_position_controller:
     max_force: 500.0
     p: -7100.0
     position_deadband: 0.003
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_rfj0_position_controller:
-  joint: lh_RFJ0
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_rfj0_position_controller:
+  joint: rh_RFJ0
   pid:
     d: -50.0
     friction_deadband: 2000.0
@@ -126,9 +126,9 @@ sh_lh_rfj0_position_controller:
     max_force: 600.0
     p: -7100.0
     position_deadband: 0.002
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_rfj3_position_controller:
-  joint: lh_RFJ3
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_rfj3_position_controller:
+  joint: rh_RFJ3
   pid:
     d: -270.0
     deadband: 0.0
@@ -138,9 +138,9 @@ sh_lh_rfj3_position_controller:
     max_force: 600.0
     p: -5900.0
     position_deadband: 0.002
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_rfj4_position_controller:
-  joint: lh_RFJ4
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_rfj4_position_controller:
+  joint: rh_RFJ4
   pid:
     d: 310.0
     deadband: 0.0
@@ -150,9 +150,9 @@ sh_lh_rfj4_position_controller:
     max_force: 500.0
     p: 7100.0
     position_deadband: 0.003
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_thj1_position_controller:
-  joint: lh_THJ1
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_thj1_position_controller:
+  joint: rh_THJ1
   pid:
     d: 270.0
     deadband: 0.0
@@ -162,9 +162,9 @@ sh_lh_thj1_position_controller:
     max_force: 500.0
     p: 5500.0
     position_deadband: 0.002
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_thj2_position_controller:
-  joint: lh_THJ2
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_thj2_position_controller:
+  joint: rh_THJ2
   pid:
     d: 270.0
     deadband: 0.0
@@ -174,9 +174,9 @@ sh_lh_thj2_position_controller:
     max_force: 500.0
     p: 6100.0
     position_deadband: 0.002
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_thj3_position_controller:
-  joint: lh_THJ3
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_thj3_position_controller:
+  joint: rh_THJ3
   pid:
     d: 330.0
     deadband: 0.0
@@ -186,9 +186,9 @@ sh_lh_thj3_position_controller:
     max_force: 400.0
     p: 7300.0
     position_deadband: 0.003
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_thj4_position_controller:
-  joint: lh_THJ4
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_thj4_position_controller:
+  joint: rh_THJ4
   pid:
     d: 310.0
     deadband: 0.0
@@ -198,9 +198,9 @@ sh_lh_thj4_position_controller:
     max_force: 500.0
     p: 5300.0
     position_deadband: 0.003
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_thj5_position_controller:
-  joint: lh_THJ5
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_thj5_position_controller:
+  joint: rh_THJ5
   pid:
     d: 330.0
     deadband: 0.0
@@ -210,9 +210,9 @@ sh_lh_thj5_position_controller:
     max_force: 600.0
     p: 5500.0
     position_deadband: 0.003
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_wrj1_position_controller:
-  joint: lh_WRJ1
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_wrj1_position_controller:
+  joint: rh_WRJ1
   pid:
     d: 270.0
     deadband: 0.0
@@ -222,9 +222,9 @@ sh_lh_wrj1_position_controller:
     max_force: 600.0
     p: 7100.0
     position_deadband: 0.003
-  type: sr_mechanism_controllers/SlhJointPositionController
-sh_lh_wrj2_position_controller:
-  joint: lh_WRJ2
+  type: sr_mechanism_controllers/SrhJointPositionController
+sh_rh_wrj2_position_controller:
+  joint: rh_WRJ2
   pid:
     d: -120.0
     deadband: 0.0
@@ -234,4 +234,4 @@ sh_lh_wrj2_position_controller:
     max_force: 600.0
     p: -8900.0
     position_deadband: 0.003
-  type: sr_mechanism_controllers/SlhJointPositionController
+  type: sr_mechanism_controllers/SrhJointPositionController
