--- a/sr_hand_config/113/controls/tactiles/sr_tactile_sensor_controller.yaml
+++ b/sr_hand_config/113/controls/tactiles/sr_tactile_sensor_controller.yaml
@@ -1,4 +1,4 @@
-sr_lh_tactile_sensor_controller:
+sr_rh_tactile_sensor_controller:
   type: sr_tactile_sensor_controller/SrTactileSensorController
   publish_rate: 100
-  prefix: lh
+  prefix: rh
