--- a/sr_hand_config/111/general_info.yaml
+++ b/sr_hand_config/111/general_info.yaml
@@ -1,7 +1,14 @@
 side: 'right'
 type: 'hand_e'
-name: 'phantomhand_A'
-biotac: false
+version: 'E3M5'
+fingers: False
+sensors:
+  tip: {}
+  mid: {}
+  prox: {}
+  palm: {}
 mapping_path:
   package_name: sr_edc_launch
   relative_path: mappings/default_mappings/rh_E_v4.yaml
+name: 'phantomhand_A'  # deprecated, to be removed
+biotac: false # deprecated, to be removed
