--- a/sr_hand_config/114/general_info.yaml
+++ b/sr_hand_config/114/general_info.yaml
@@ -1,23 +1,14 @@
 side: 'left'
 type: 'hand_e'
-name: 'phantomhand_004'
-biotac: false
-mapping_path:
-  package_name: sr_edc_launch
-  relative_path: mappings/default_mappings/lh_E_v4.yaml
-
-
-side: 'right'
-type: 'hand_e'
 version: 'E3M5'
-fingers: [th, ff, mf, rf, lf]
+fingers: False
 sensors:
-  tip: {th: pst, ff: pst, mf: pst, rf: pst, lf: pst}
+  tip: {}
   mid: {}
   prox: {}
   palm: {}
 mapping_path:
   package_name: sr_edc_launch
-  relative_path: mappings/default_mappings/rh_E_v1.yaml
-name: 'shadowrobot_140515_noetic'  # deprecated, to be removed
+  relative_path: mappings/default_mappings/lh_E_v4.yaml
+name: 'phantomhand_004'  # deprecated, to be removed
 biotac: false # deprecated, to be removed
