Refactoring general_info.yaml's for new sr_description (#26)
* Refactoring arguments

* Adding phantomhands refactored

* Removing unused 'name', changing template

--- a/sr_hand_config/113/general_info.yaml
+++ b/sr_hand_config/113/general_info.yaml
@@ -1,7 +1,13 @@
 side: 'right'
 type: 'hand_e'
-name: 'phantomhand_003'
-biotac: false
+version: 'E3M5'
+fingers: False
+sensors:
+  tip: {}
+  mid: {}
+  prox: {}
+  palm: {}
 mapping_path:
   package_name: sr_edc_launch
   relative_path: mappings/default_mappings/rh_E_v4.yaml
+biotac: false # deprecated, to be removed
