--- a/sr_hand_config/1066/general_info.yaml
+++ b/sr_hand_config/1066/general_info.yaml
@@ -1,7 +1,13 @@
 side: 'right'
 type: 'hand_g'
-name: 'demohand_lite_v1'
-biotac: false
+version: 'G1M5'
+fingers: [th, ff, mf, rf]
+sensors:
+  tip: {th: pst, ff: pst, mf: pst, rf: pst}
+  mid: {}
+  prox: {}
+  palm: {}
 mapping_path:
   package_name: sr_edc_launch
   relative_path: mappings/default_mappings/rh_lite_v1.yaml
+biotac: false # deprecated, to be removed
