--- a/sr_hand_config/114/general_info.yaml
+++ b/sr_hand_config/114/general_info.yaml
@@ -1,7 +1,13 @@
 side: 'left'
 type: 'hand_e'
-name: 'phantomhand_004'
-biotac: false
+version: 'E3M5'
+fingers: False
+sensors:
+  tip: {}
+  mid: {}
+  prox: {}
+  palm: {}
 mapping_path:
   package_name: sr_edc_launch
   relative_path: mappings/default_mappings/lh_E_v4.yaml
+biotac: false # deprecated, to be removed
