--- a/sr_hand_config/1370/general_info.yaml
+++ b/sr_hand_config/1370/general_info.yaml
@@ -1,7 +1,13 @@
 side: 'right'
 type: 'hand_e'
-name: 'demohand_C'
-biotac: false
+version: 'E3M5'
+fingers: [th, ff, mf, rf, lf]
+sensors:
+  tip: {th: pst, ff: pst, mf: pst, rf: pst, lf: pst}
+  mid: {}
+  prox: {}
+  palm: {}
 mapping_path:
   package_name: sr_edc_launch
   relative_path: mappings/default_mappings/rh_E_v3.yaml
+biotac: false # deprecated, to be removed
