--- a/sr_hand_config/2346/general_info.yaml
+++ b/sr_hand_config/2346/general_info.yaml
@@ -1,7 +1,13 @@
 side: 'left'
 type: 'hand_e'
-name: 'demohand_D'
-biotac: false
+version: 'E3M5'
+fingers: [th, ff, mf, rf, lf]
+sensors:
+  tip: {th: bt_sp, ff: bt_sp, mf: bt_sp, rf: bt_sp, lf: bt_sp}
+  mid: {}
+  prox: {}
+  palm: {}
 mapping_path:
   package_name: sr_edc_launch
   relative_path: mappings/default_mappings/lh_E_v3.yaml
+biotac: true # deprecated, to be removed
