--- a/sr_hand_config/5402/general_info.yaml
+++ b/sr_hand_config/5402/general_info.yaml
@@ -10,4 +10,4 @@ sensors:
 mapping_path:
   package_name: sr_edc_launch
   relative_path: mappings/default_mappings/rh_lite_v1.yaml
-biotac: true  # deprecated, to be removed
+biotac: false  # deprecated, to be removed
