--- a/sr_hand_config/5210/calibrations/pressure_calibration.yaml
+++ b/sr_hand_config/5210/calibrations/pressure_calibration.yaml
@@ -1,66 +1,52 @@
-{'sr_pressure_calibrations': [
-# Each joint has 2 pressure sensors 0 and 1. So we have a row per joint/sensor combination.
-# ["<joint_name>_<sensor>", [[<raw sensor value>, <calibrated millibar pressure>], [<raw sensor value>, <calibrated millibar pressure>]]], 
-# e.g.
-#["FFJ1_0", [[0.0, 0.0], [1.0, 1.0]]], 
-#["FFJ1_1", [[0.0, 0.0], [1.0, 1.0]]], 
-#
-# Note the calibrated value should be in millibars as the output in the message is an integer.
-#
-["FFJ0_0", [[167.0, 0.0], [626.0, 1000.0], [1201.0, 2000.0], [1756.0, 3000.0]]],
-["FFJ0_1", [[148.0, 0.0], [609.0, 1000.0], [1176.0, 2000.0], [1708.0, 3000.0]]],
-["FFJ1_0", [[0.0, 0.0], [1.0, 1.0]]], 
-["FFJ1_1", [[0.0, 0.0], [1.0, 1.0]]], 
-["FFJ2_0", [[0.0, 0.0], [1.0, 1.0]]],
-["FFJ2_1", [[0.0, 0.0], [1.0, 1.0]]],
-["FFJ3_0", [[207.0, 0.0], [668.0, 1000.0], [1240.0, 2000.0], [1800.0, 3000.0]]],
-["FFJ3_1", [[223.0, 0.0], [663.0, 1000.0], [1219.0, 2000.0], [1759.0, 3000.0]]],
-["FFJ4_0", [[115.0, 0.0], [576.0, 1000.0], [1136.0, 2000.0], [1688.0, 3000.0]]],
-["FFJ4_1", [[192.0, 0.0], [652.0, 1000.0], [1216.0, 2000.0], [1763.0, 3000.0]]],
-["MFJ0_0", [[0.0, 0.0], [1.0, 1.0]]],
-["MFJ0_1", [[0.0, 0.0], [1.0, 1.0]]],
-["MFJ1_0", [[0.0, 0.0], [1.0, 1.0]]],
-["MFJ1_1", [[0.0, 0.0], [1.0, 1.0]]],
-["MFJ2_0", [[0.0, 0.0], [1.0, 1.0]]],
-["MFJ2_1", [[0.0, 0.0], [1.0, 1.0]]],
-["MFJ3_0", [[0.0, 0.0], [1.0, 1.0]]],
-["MFJ3_1", [[0.0, 0.0], [1.0, 1.0]]],
-["MFJ4_0", [[0.0, 0.0], [1.0, 1.0]]],
-["MFJ4_1", [[0.0, 0.0], [1.0, 1.0]]],
-["RFJ0_0", [[209.0, 0.0], [710.0, 1000.0], [1279.0, 2000.0], [1827.0, 3000.0]]],
-["RFJ0_1", [[214.0, 0.0], [696.0, 1000.0], [1264.0, 2000.0], [1811.0, 3000.0]]],
-["RFJ1_0", [[0.0, 0.0], [1.0, 1.0]]],
-["RFJ1_1", [[0.0, 0.0], [1.0, 1.0]]],
-["RFJ2_0", [[0.0, 0.0], [1.0, 1.0]]],
-["RFJ2_1", [[0.0, 0.0], [1.0, 1.0]]],
-["RFJ3_0", [[174.0, 0.0], [626.0, 1000.0], [1180.0, 2000.0], [1728.0, 3000.0]]],
-["RFJ3_1", [[231.0, 0.0], [716.0, 1000.0], [1272.0, 2000.0], [1812.0, 3000.0]]],
-["RFJ4_0", [[211.0, 0.0], [704.0, 1000.0], [1278.0, 2000.0], [1831.0, 3000.0]]],
-["RFJ4_1", [[172.0, 0.0], [640.0, 1000.0], [1196.0, 2000.0], [1743.0, 3000.0]]],
-["LFJ0_0", [[0.0, 0.0], [1.0, 1.0]]],
-["LFJ0_1", [[0.0, 0.0], [1.0, 1.0]]],
-["LFJ1_0", [[0.0, 0.0], [1.0, 1.0]]],
-["LFJ1_1", [[0.0, 0.0], [1.0, 1.0]]],
-["LFJ2_0", [[0.0, 0.0], [1.0, 1.0]]],
-["LFJ2_1", [[0.0, 0.0], [1.0, 1.0]]],
-["LFJ3_0", [[0.0, 0.0], [1.0, 1.0]]],
-["LFJ3_1", [[0.0, 0.0], [1.0, 1.0]]],
-["LFJ4_0", [[0.0, 0.0], [1.0, 1.0]]],
-["LFJ4_1", [[0.0, 0.0], [1.0, 1.0]]],
-["LFJ5_0", [[0.0, 0.0], [1.0, 1.0]]],
-["LFJ5_1", [[0.0, 0.0], [1.0, 1.0]]],
-["THJ1_0", [[0.0, 0.0], [1.0, 1.0]]],
-["THJ1_1", [[0.0, 0.0], [1.0, 1.0]]],
-["THJ2_0", [[143.0, 0.0], [632.0, 1000.0], [1231.0, 2000.0], [1808.0, 3000.0]]],
-["THJ2_1", [[184.0, 0.0], [705.0, 1000.0], [1328.0, 2000.0], [1931.0, 3000.0]]],
-["THJ3_0", [[127.0, 0.0], [591.0, 1000.0], [1157.0, 2000.0], [1703.0, 3000.0]]],
-["THJ3_1", [[254.0, 0.0], [704.0, 1000.0], [1264.0, 2000.0], [1791.0, 3000.0]]],
-["THJ4_0", [[243.0, 0.0], [752.0, 1000.0], [1351.0, 2000.0], [1927.0, 3000.0]]],
-["THJ4_1", [[184.0, 0.0], [652.0, 1000.0], [1216.0, 2000.0], [1752.0, 3000.0]]],
-["THJ5_0", [[193.0, 0.0], [642.0, 1000.0], [1209.0, 2000.0], [1750.0, 3000.0]]],
-["THJ5_1", [[335.0, 0.0], [767.0, 1000.0], [1351.0, 2000.0], [1900.0, 3000.0]]],
-["WRJ1_0", [[147.0, 0.0], [556.0, 1000.0],  [975.0, 2000.0], [1438.0, 3000.0]]],
-["WRJ1_1", [[231.0, 0.0], [728.0, 1000.0], [1311.0, 2000.0], [1878.0, 3000.0]]],
-["WRJ2_0", [[323.0, 0.0], [758.0, 1000.0], [1315.0, 2000.0], [1863.0, 3000.0]]],
-["WRJ2_1", [[230.0, 0.0], [696.0, 1000.0], [1266.0, 2000.0], [1824.0, 3000.0]]],
-]}
+sr_calibrations: [
+["FFJ1", [[4095.0, 0.0], [2189.0, 22.5], [1554.0, 45.0], [859.0, 67.5], [416.0, 90.0]]], 
+["FFJ2", [[4095.0, 0.0], [2814.0, 22.5], [2359.0, 45.0], [1986.0, 67.5], [1563.0, 90.0]]], 
+["FFJ3", [[4095.0, 0.0], [1750.0, 22.5], [2084.0, 45.0], [2371.0, 67.5], [2605.0, 90.0]]], 
+["FFJ4", [[6.0, -20.0], [2037.0, -10.0], [1711.0, 0.0], [1364.0, 10.0], [1119.0, 20.0]]], 
+["MFJ1", [[4095.0, 0.0], [2565.0, 22.5], [1768.0, 45.0], [928.0, 67.5], [368.0, 90.0]]], 
+["MFJ2", [[4095.0, 0.0], [2511.0, 22.5], [2151.0, 45.0], [1792.0, 67.5], [1458.0, 90.0]]], 
+["MFJ3", [[4095.0, 0.0], [1911.0, 22.5], [2164.0, 45.0], [2392.0, 67.5], [2571.0, 90.0]]], 
+["MFJ4", [[6.0, -20.0], [1614.0, -10.0], [1266.0, 0.0], [897.0, 10.0], [599.0, 20.0]]], 
+["RFJ1", [[4095.0, 0.0], [2382.0, 22.5], [1609.0, 45.0], [927.0, 67.5], [450.0, 90.0]]], 
+["RFJ2", [[4095.0, 0.0], [2605.0, 22.5], [2288.0, 45.0], [1936.0, 67.5], [1570.0, 90.0]]], 
+["RFJ3", [[4095.0, 0.0], [1785.0, 22.5], [2080.0, 45.0], [2364.0, 67.5], [2603.0, 90.0]]], 
+["RFJ4", [[7.0, -20.0], [1442.0, -10.0], [1799.0, 0.0], [2136.0, 10.0], [2470.0, 20.0]]], 
+["LFJ1", [[4095.0, 0.0], [2431.0, 22.5], [1899.0, 45.0], [1309.0, 67.5], [808.0, 90.0]]], 
+["LFJ2", [[4095.0, 0.0], [2663.0, 22.5], [2313.0, 45.0], [1896.0, 67.5], [1481.0, 90.0]]], 
+["LFJ3", [[4095.0, 0.0], [2012.0, 22.5], [2303.0, 45.0], [2546.0, 67.5], [2698.0, 90.0]]], 
+["LFJ4", [[10.0, -20.0], [1875.0, -10.0], [2200.0, 0.0], [2548.0, 10.0], [2864.0, 20.0]]], 
+["LFJ5", [[10.0, 0.0], [2162.0, 22.5], [2807.0, 45.0], [3913.0, 67.5]]], 
+["THJ3", [[9.0, -15.0], [2132.0, 0.0], [2543.0, 15.0]]], 
+["THJ4", [[9.0, 0.0], [1955.0, 22.5], [2232.0, 45.0], [2503.0, 67.5]]], 
+["THJ5", [[8.0, -60.0], [707.0, -45.0], [942.0, -30.0], [1279.0, -15.0], [1591.0, 0.0], [1951.0, 15.0], [2329.0, 30.0], [2609.0, 45.0], [2896.0, 60.0]]], 
+["WRJ1", [[2267.0, -45.0], [2405.0, -22.5], [1683.0, 0.0], [1689.0, 15.0], [1721.0, 30.0]]], 
+["WRJ2", [[10.0, -30.0], [1269.0, 0.0], [665.0, 10.0]]], 
+]
+
+sr_calibrations_coupled: [
+[["THJ1", "THJ2"], [[[2616.8, 2346.05], 0.0, 40.0], 
+                    [[2604.16, 2194.0], 0.0, 20.0], 
+                    [[2585.07, 2021.91], 0.0, 0.0], 
+                    [[2571.89, 1841.91], 0.0, -20.0], 
+                    [[2558.87, 1698.09], 0.0, -40.0], 
+                    [[2202.96, 2319.96], 22.5, 40.0], 
+                    [[2204.04, 2164.93], 22.5, 20.0], 
+                    [[2170.69, 1982.58], 22.5, 0.0], 
+                    [[2180.93, 1802.38], 22.5, -20.0], 
+                    [[2169.21, 1664.73], 22.5, -40.0], 
+                    [[1759.75, 2284.07], 45.0, 40.0], 
+                    [[1752.02, 2127.79], 45.0, 20.0], 
+                    [[1735.82, 1948.67], 45.0, 0.0], 
+                    [[1719.74, 1780.41], 45.0, -20.0], 
+                    [[1711.25, 1640.12], 45.0, -40.0], 
+                    [[1335.86, 2263.24], 67.5, 40.0], 
+                    [[1313.34, 2097.61], 67.5, 20.0], 
+                    [[1302.06, 1923.0], 67.5, 0.0], 
+                    [[1287.52, 1753.0], 67.5, -20.0], 
+                    [[1274.83, 1619.11], 67.5, -40.0], 
+                    [[1082.0, 2219.0], 90.0, 40.0], 
+                    [[1068.0, 2069.0], 90.0, 20.0], 
+                    [[1050.0, 1868.0], 90.0, 0.0], 
+                    [[1039.0, 1697.0], 90.0, -20.0], 
+                    [[1025.0, 1577.0], 90.0, -40.0]]]
+]
