--- a/sr_hand_config/template/general_info.yaml
+++ b/sr_hand_config/template/general_info.yaml
@@ -1,8 +1,8 @@
-side: 'right'
-type: 'hand_e'
-version: 'E3M5'
+side: 'right'  # right/left
+type: 'hand_e'  # hand_e/hand_g/hand_c
+version: 'E3M5'  # E3M5/E2M3 (for hand_e) G1M5 (for hand_g) C6M2 (for hand_c)
 fingers: [th, ff, mf, rf, lf]
-sensors:
+sensors:  # pst/bt_sp/bt_2p
   tip: {th: bt_sp, ff: bt_sp, mf: bt_sp, rf: bt_sp, lf: bt_sp}
   mid: {}
   prox: {}
@@ -10,4 +10,3 @@ sensors:
 mapping_path:
   package_name: sr_edc_launch
   relative_path: mappings/default_mappings/rh_E_v4.yaml
-biotac: true  # deprecated, to be removed
