--- a/sr_hand_config/4106/controls/host/pwm/sr_edc_joint_position_controllers_PWM.yaml
+++ b/sr_hand_config/4106/controls/host/pwm/sr_edc_joint_position_controllers_PWM.yaml
@@ -161,7 +161,7 @@ sh_lh_thj1_position_controller:
     i_clamp: 0.0
     max_force: 500.0
     p: -5700.0
-    position_deadband: 0.00000000000001
+    position_deadband: 0.002
   type: sr_mechanism_controllers/SrhJointPositionController
 sh_lh_thj2_position_controller:
   joint: lh_THJ2
@@ -173,7 +173,7 @@ sh_lh_thj2_position_controller:
     i_clamp: 0.0
     max_force: 500.0
     p: -6000.0
-    position_deadband: 0.00000000000001
+    position_deadband: 0.002
   type: sr_mechanism_controllers/SrhJointPositionController
 sh_lh_thj3_position_controller:
   joint: lh_THJ3
