added changes to 113 and 114

--- a/sr_hand_config/113/general_info.yaml
+++ b/sr_hand_config/113/general_info.yaml
@@ -1,9 +1,9 @@
 side: 'right'
 type: 'hand_e'
 version: 'E3M5'
-fingers: False
+fingers: [th, ff, mf, rf, lf]
 sensors:
-  tip: {}
+  tip: {th: pst, ff: pst, mf: pst, rf: pst, lf: pst}
   mid: {}
   prox: {}
   palm: {}
