--- a/sr_hand_config/Template_EL/general_info.yaml
+++ b/sr_hand_config/Template_EL/general_info.yaml
@@ -3,7 +3,7 @@ type: 'hand_e'
 version: 'E3M5'
 fingers: [th, ff, mf, rf, lf]
 sensors:
-  tip: {th: bt_sp, ff: bt_sp, mf: bt_sp, rf: bt_sp, lf: bt_sp}
+  tip: {th: pst, ff: pst, mf: pst, rf: pst, lf: pst}
   mid: {}
   prox: {}
   palm: {}
