--- a/sr_hand_config/Template_EL/general_info.yaml
+++ b/sr_hand_config/Template_EL/general_info.yaml
@@ -1,12 +1,12 @@
-side: 'right'
+side: 'left'
 type: 'hand_e'
 version: 'E3M5'
 fingers: [th, ff, mf, rf, lf]
 sensors:
-  tip: {th: bt_sp, ff: bt_sp, mf: bt_sp, rf: bt_sp, lf: bt_sp}
+  tip: {th: pst, ff: pst, mf: pst, rf: pst, lf: pst}
   mid: {}
   prox: {}
   palm: {}
 mapping_path:
   package_name: sr_edc_launch
-  relative_path: mappings/default_mappings/rh_E_v4.yaml
+  relative_path: mappings/default_mappings/lh_E_v5.yaml
