--- a/sr_hand_config/362/calibrations/calibration.yaml
+++ b/sr_hand_config/362/calibrations/calibration.yaml
@@ -10,14 +10,14 @@ sr_calibrations: [
 ["RFJ1", [[2930.0, 0.0], [2302.0, 22.5], [1499.0, 45.0], [1019.0, 67.5], [369.0, 90.0]]], 
 ["RFJ2", [[1481.0, 0.0], [1852.0, 22.5], [2254.0, 45.0], [2644.0, 67.5], [2904.0, 90.0]]], 
 ["RFJ3", [[1379.0, 0.0], [1809.0, 22.5], [2336.0, 45.0], [2727.0, 67.5], [3075.0, 90.0]]], 
-["RFJ4", [[1968.48, -20.0], [1926.87, -10.0], [1812.43, 0.0], [1547.0, 10.0], [1087.0, 20.0]]], 
+["RFJ4", [[1968.0, -20.0], [1926.0, -10.0], [1812.0, 0.0], [1547.0, 10.0], [1087.0, 20.0]]], 
 ["LFJ1", [[3199.0, 0.0], [2461.0, 22.5], [1669.0, 45.0], [1027.0, 67.5], [440.0, 90.0]]], 
 ["LFJ2", [[2595.0, 0.0], [1994.0, 22.5], [1657.0, 45.0], [1284.0, 67.5], [921.0, 90.0]]], 
 ["LFJ3", [[1879.0, 0.0], [2392.0, 22.5], [2849.0, 45.0], [3129.0, 67.5], [3387.0, 90.0]]], 
 ["LFJ4", [[2065.0, -20.0], [2012.0, -10.0], [1916.0, 0.0], [1528.0, 10.0], [985.0, 20.0]]], 
 ["LFJ5", [[1064.0, 0.0], [1558.0, 22.5], [2050.0, 45.0], [2388.0, 67.5]]], 
-["THJ1", [[0.0, 0.0], [1.0, 0.0]]], 
-["THJ2", [[0.0, 0.0], [1.0, 0.0]]], 
+["THJ1", [[2388.0, -30.0], [2384.0, -15.0], [2383.0, 0.0], [2382.0, 15.0], [8.0, 30.0]]], 
+["THJ2", [[1981.0, -30.0], [1924.0, -15.0], [1872.0, 0.0], [1816.0, 15.0], [1744.0, 30.0]]], 
 ["THJ3", [[2733.0, -15.0], [2220.0, 0.0], [1725.0, 15.0]]], 
 ["THJ4", [[2452.0, 0.0], [2191.0, 22.5], [1883.0, 45.0], [1631.0, 67.5]]], 
 ["THJ5", [[764.0, -60.0], [1004.0, -45.0], [1229.0, -30.0], [1692.0, -15.0], [2009.0, 0.0], [2488.0, 15.0], [2686.0, 30.0], [2933.0, 45.0], [3136.0, 60.0]]], 
