--- a/sr_hand_config/1370/controls/motors/motor_board_effort_controllers.yaml
+++ b/sr_hand_config/1370/controls/motors/motor_board_effort_controllers.yaml
@@ -263,7 +263,7 @@ thj1:
     torque_limit: 400
     torque_limiter_gain: 64
   pos_filter:
-    tau: 0.05
+    tau: 0.00000000000001
 thj2:
   backlash_compensation: true
   pid:
