--- a/sr_hand_config/1066/calibrations/calibration.yaml
+++ b/sr_hand_config/1066/calibrations/calibration.yaml
@@ -1,5 +1,5 @@
-{'sr_calibrations': [
-["FFJ1", [[3241.31, 0.0], [2540.62, 22.5], [1707.01, 45.0], [980.01, 67.5], [364.06, 90.0]]],  
+sr_calibrations: [
+["FFJ1", [[3241.31, 0.0], [2540.62, 22.5], [1707.01, 45.0], [980.01, 67.5], [364.06, 90.0]]], 
 ["FFJ2", [[2843.91, 0.0], [2544.83, 22.5], [2147.76, 45.0], [1736.69, 67.5], [1347.29, 90.0]]], 
 ["FFJ3", [[2638.3, 0.0], [2116.95, 22.5], [1526.02, 45.0], [985.06, 67.5], [663.96, 90.0]]], 
 ["FFJ4", [[2614.57, -20.0], [2301.73, -10.0], [1984.16, 0.0], [1667.25, 10.0], [1367.34, 20.0]]], 
@@ -11,11 +11,11 @@
 ["RFJ2", [[2854.88, 0.0], [2528.53, 22.5], [2106.1, 45.0], [1675.29, 67.5], [1331.03, 90.0]]], 
 ["RFJ3", [[2516.0, 0.0], [1999.94, 22.5], [1456.01, 45.0], [1051.85, 67.5], [768.81, 90.0]]], 
 ["RFJ4", [[779.84, -20.0], [1073.15, -10.0], [1396.1, 0.0], [1733.03, 10.0], [2074.54, 20.0]]], 
-["LFJ1", [[0.0, 0.0], [1.0, 0.0]]], 
-["LFJ2", [[0.0, 0.0], [1.0, 0.0]]], 
-["LFJ3", [[0.0, 0.0], [1.0, 0.0]]], 
-["LFJ4", [[0.0, 0.0], [1.0, 0.0]]], 
-["LFJ5", [[0.0, 0.0], [1.0, 0.0]]], 
+["LFJ1", [[4095.0, 0.0], [2431.0, 22.5], [1899.0, 45.0], [1309.0, 67.5], [808.0, 90.0]]], 
+["LFJ2", [[4095.0, 0.0], [2663.0, 22.5], [2313.0, 45.0], [1896.0, 67.5], [1481.0, 90.0]]], 
+["LFJ3", [[4095.0, 0.0], [2012.0, 22.5], [2303.0, 45.0], [2546.0, 67.5], [2698.0, 90.0]]], 
+["LFJ4", [[10.0, -20.0], [1875.0, -10.0], [2200.0, 0.0], [2548.0, 10.0], [2864.0, 20.0]]], 
+["LFJ5", [[10.0, 0.0], [2162.0, 22.5], [2807.0, 45.0], [3913.0, 67.5]]], 
 ["THJ3", [[1433.0, -15.0], [1433.0, 0.0], [1433.0, 15.0]]], 
 ["THJ4", [[2505.0, 0.0], [2177.0, 22.5], [1864.0, 45.0], [1584.0, 67.5]]], 
 ["THJ5", [[678.0, -60.0], [801.0, -45.0], [1003.0, -30.0], [1298.0, -15.0], [1633.0, 0.0], [2015.0, 15.0], [2483.0, 30.0], [2807.0, 45.0], [3142.0, 60.0]]], 
@@ -24,7 +24,20 @@
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[1952.0, 1841.0], 45.0, -20.0], 
+[["THJ1", "THJ2"], [[[2875.0, 2427.0], 0.0, 40.0], 
+                    [[2860.0, 2251.0], 0.0, 20.0], 
+                    [[2836.0, 2082.0], 0.0, 0.0], 
+                    [[2825.0, 1887.0], 0.0, -20.0], 
+                    [[2811.0, 1736.0], 0.0, -40.0], 
+                    [[2460.0, 2405.0], 22.5, 40.0], 
+                    [[2444.0, 2239.0], 22.5, 20.0], 
+                    [[2428.0, 2045.0], 22.5, 0.0], 
+                    [[2409.0, 1866.0], 22.5, -20.0], 
+                    [[2390.0, 1718.0], 22.5, -40.0], 
+                    [[1998.0, 2379.0], 45.0, 40.0], 
+                    [[1986.0, 2209.0], 45.0, 20.0], 
+                    [[1969.0, 2021.0], 45.0, 0.0], 
+                    [[1952.0, 1841.0], 45.0, -20.0], 
                     [[1940.0, 1692.0], 45.0, -40.0], 
                     [[1597.0, 2363.0], 67.5, 40.0], 
                     [[1583.0, 2191.0], 67.5, 20.0], 
