--- a/sr_hand_config/1066/calibrations/calibration.yaml
+++ b/sr_hand_config/1066/calibrations/calibration.yaml
@@ -1,52 +1,26 @@
-sr_calibrations: [
-["FFJ1", [[3241.31, 0.0], [2540.62, 22.5], [1707.01, 45.0], [980.01, 67.5], [364.06, 90.0]]], 
-["FFJ2", [[2843.91, 0.0], [2544.83, 22.5], [2147.76, 45.0], [1736.69, 67.5], [1347.29, 90.0]]], 
-["FFJ3", [[2638.3, 0.0], [2116.95, 22.5], [1526.02, 45.0], [985.06, 67.5], [663.96, 90.0]]], 
-["FFJ4", [[2614.57, -20.0], [2301.73, -10.0], [1984.16, 0.0], [1667.25, 10.0], [1367.34, 20.0]]], 
-["MFJ1", [[2994.69, 0.0], [2247.11, 22.5], [1491.07, 45.0], [838.99, 67.5], [336.85, 90.0]]], 
-["MFJ2", [[3049.37, 0.0], [2771.49, 22.5], [2378.27, 45.0], [1933.3, 67.5], [1522.81, 90.0]]], 
-["MFJ3", [[2577.96, 0.0], [1990.74, 22.5], [1486.14, 45.0], [993.66, 67.5], [680.28, 90.0]]], 
-["MFJ4", [[2275.22, -20.0], [1931.73, -10.0], [1586.45, 0.0], [1254.03, 10.0], [936.16, 20.0]]], 
-["RFJ1", [[3107.56, 0.0], [2352.06, 22.5], [1552.05, 45.0], [854.0, 67.5], [297.02, 90.0]]], 
-["RFJ2", [[2854.88, 0.0], [2528.53, 22.5], [2106.1, 45.0], [1675.29, 67.5], [1331.03, 90.0]]], 
-["RFJ3", [[2516.0, 0.0], [1999.94, 22.5], [1456.01, 45.0], [1051.85, 67.5], [768.81, 90.0]]], 
-["RFJ4", [[779.84, -20.0], [1073.15, -10.0], [1396.1, 0.0], [1733.03, 10.0], [2074.54, 20.0]]], 
-["LFJ1", [[4095.0, 0.0], [2431.0, 22.5], [1899.0, 45.0], [1309.0, 67.5], [808.0, 90.0]]], 
-["LFJ2", [[4095.0, 0.0], [2663.0, 22.5], [2313.0, 45.0], [1896.0, 67.5], [1481.0, 90.0]]], 
-["LFJ3", [[4095.0, 0.0], [2012.0, 22.5], [2303.0, 45.0], [2546.0, 67.5], [2698.0, 90.0]]], 
-["LFJ4", [[10.0, -20.0], [1875.0, -10.0], [2200.0, 0.0], [2548.0, 10.0], [2864.0, 20.0]]], 
-["LFJ5", [[10.0, 0.0], [2162.0, 22.5], [2807.0, 45.0], [3913.0, 67.5]]], 
-["THJ3", [[1433.0, -15.0], [1433.0, 0.0], [1433.0, 15.0]]], 
-["THJ4", [[2505.0, 0.0], [2177.0, 22.5], [1864.0, 45.0], [1584.0, 67.5]]], 
-["THJ5", [[678.0, -60.0], [801.0, -45.0], [1003.0, -30.0], [1298.0, -15.0], [1633.0, 0.0], [2015.0, 15.0], [2483.0, 30.0], [2807.0, 45.0], [3142.0, 60.0]]], 
-["WRJ1", [[2267.0, -45.0], [2405.0, -22.5], [1683.0, 0.0], [1689.0, 15.0], [1721.0, 30.0]]], 
-["WRJ2", [[10.0, -30.0], [1269.0, 0.0], [665.0, 10.0]]], 
-]
-
-sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2875.0, 2427.0], 0.0, 40.0], 
-                    [[2860.0, 2251.0], 0.0, 20.0], 
-                    [[2836.0, 2082.0], 0.0, 0.0], 
-                    [[2825.0, 1887.0], 0.0, -20.0], 
-                    [[2811.0, 1736.0], 0.0, -40.0], 
-                    [[2460.0, 2405.0], 22.5, 40.0], 
-                    [[2444.0, 2239.0], 22.5, 20.0], 
-                    [[2428.0, 2045.0], 22.5, 0.0], 
-                    [[2409.0, 1866.0], 22.5, -20.0], 
-                    [[2390.0, 1718.0], 22.5, -40.0], 
-                    [[1998.0, 2379.0], 45.0, 40.0], 
-                    [[1986.0, 2209.0], 45.0, 20.0], 
-                    [[1969.0, 2021.0], 45.0, 0.0], 
-                    [[1952.0, 1841.0], 45.0, -20.0], 
-                    [[1940.0, 1692.0], 45.0, -40.0], 
-                    [[1597.0, 2363.0], 67.5, 40.0], 
-                    [[1583.0, 2191.0], 67.5, 20.0], 
-                    [[1563.0, 2003.0], 67.5, 0.0], 
-                    [[1544.0, 1826.0], 67.5, -20.0], 
-                    [[1531.0, 1665.0], 67.5, -40.0], 
-                    [[1260.0, 2342.0], 90.0, 40.0], 
-                    [[1247.0, 2178.0], 90.0, 20.0], 
-                    [[1226.0, 1987.0], 90.0, 0.0], 
-                    [[1209.0, 1812.0], 90.0, -20.0], 
-                    [[1196.0, 1653.0], 90.0, -40.0]]]
-]
+{'sr_calibrations': [
+["FFJ1", [[3048.0, 0.0], [2389.0, 22.5], [1711.0, 45.0], [1018.0, 67.5], [442.0, 90.0]]], 
+["FFJ2", [[2684.0, 0.0], [2374.0, 22.5], [1996.0, 45.0], [1611.0, 67.5], [1252.0, 90.0]]], 
+["FFJ3", [[1538.0, 0.0], [2089.0, 22.5], [2681.0, 45.0], [3088.0, 67.5], [3482.0, 90.0]]], 
+["FFJ4", [[888.0, -20.0], [1376.0, -10.0], [1772.0, 0.0], [1979.0, 10.0], [2058.0, 20.0]]], 
+["MFJ1", [[2802.0, 0.0], [2077.0, 22.5], [1270.0, 45.0], [575.0, 67.5], [44.0, 90.0]]], 
+["MFJ2", [[2412.0, 0.0], [2009.0, 22.5], [1665.0, 45.0], [1309.0, 67.5], [1018.0, 90.0]]], 
+["MFJ3", [[1616.0, 0.0], [2117.0, 22.5], [2575.0, 45.0], [2975.0, 67.5], [3253.0, 90.0]]], 
+["MFJ4", [[884.0, -20.0], [1360.0, -10.0], [1767.0, 0.0], [1920.0, 10.0], [2021.0, 20.0]]], 
+["RFJ1", [[3245.0, 0.0], [2650.0, 22.5], [1950.0, 45.0], [1368.0, 67.5], [802.0, 90.0]]], 
+["RFJ2", [[2751.0, 0.0], [2384.0, 22.5], [2046.0, 45.0], [1702.0, 67.5], [1168.0, 90.0]]], 
+["RFJ3", [[2021.0, 0.0], [2389.0, 22.5], [2792.0, 45.0], [3059.0, 67.5], [3158.0, 90.0]]], 
+["RFJ4", [[2052.43, -20.0], [1964.0, -10.0], [1778.0, 0.0], [1391.0, 10.0], [710.0, 20.0]]], 
+["LFJ1", [[0.0, 0.0], [1.0, 0.0]]], 
+["LFJ2", [[0.0, 0.0], [1.0, 0.0]]], 
+["LFJ3", [[0.0, 0.0], [1.0, 0.0]]], 
+["LFJ4", [[0.0, 0.0], [1.0, 0.0]]], 
+["LFJ5", [[0.0, 0.0], [1.0, 0.0]]], 
+["THJ1", [[2611.0, 0.0], [2198.0, 22.5], [1724.0, 45.0], [1265.0, 67.5], [957.0, 90.0]]], 
+["THJ2", [[1706.0, -40.0], [1808.0, -20.0], [1979.0, 0.0], [2118.0, 20.0], [2289.0, 40.0]]], 
+["THJ3", [[0.0, 0.0], [1.0, 0.0]]], 
+["THJ4", [[1563.4, 0.0], [1831.5, 22.5], [2137.11, 45.0], [2446.37, 67.5]]], 
+["THJ5", [[399.0, -60.0], [899.0, -30.0], [1531.0, 0.0], [2316.0, 30.0], [2913.0, 60.0]]], 
+["WRJ1", [[0.0, 0.0], [1.0, 0.0]]], 
+["WRJ2", [[0.0, 0.0], [1.0, 0.0]]], 
+]}
