disable effort filter

--- a/sr_hand_config/4106/controls/motors/motor_board_effort_controllers.yaml
+++ b/sr_hand_config/4106/controls/motors/motor_board_effort_controllers.yaml
@@ -264,6 +264,8 @@ thj1:
     torque_limiter_gain: 64
   pos_filter:
     tau: 0.00000000000001
+  effort_filter:
+    tau: 0.00000000000001
 thj2:
   backlash_compensation: true
   pid:
