--- a/sr_hand_config/1834/general_info.yaml
+++ b/sr_hand_config/1834/general_info.yaml
@@ -1,9 +1,9 @@
 side: 'right'
-type: 'hand_g'
-version: 'G1M5'
-fingers: [th, ff, rf]
+type: 'hand_e'
+version: 'E3M5'
+fingers: [th, ff, mf, rf, lf]
 sensors:
-  tip: {th: pst, ff: pst, rf: pst}
+  tip: {th: pst, ff: pst, mf: pst, rf: pst, lf: pst}
   mid: {}
   prox: {}
   palm: {}
