updating LFJ3 calibration

--- a/sr_hand_config/5018/calibrations/calibration.yaml
+++ b/sr_hand_config/5018/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2022, 2023 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -27,7 +27,7 @@ sr_calibrations: [
 ["RFJ4", [[991.0, -20.0], [1298.0, -10.0], [1622.0, 0.0], [1965.0, 10.0], [2289.0, 20.0]]], 
 ["LFJ1", [[3398.0, 0.0], [2765.0, 22.5], [2042.0, 45.0], [1467.0, 67.5], [739.0, 90.0]]], 
 ["LFJ2", [[2878.0, 0.0], [2550.0, 22.5], [2167.0, 45.0], [1763.0, 67.5], [1448.0, 90.0]]], 
-["LFJ3", [[2668.0, 0.0], [2203.0, 22.5], [1654.0, 45.0], [1183.0, 67.5], [887.0, 90.0]]], 
+["LFJ3", [[2598.0, 0.0], [2078.0, 22.5], [1583.0, 45.0], [1194.0, 67.5], [929.0, 90.0]]], 
 ["LFJ4", [[959.0, -20.0], [1241.0, -10.0], [1560.0, 0.0], [1871.0, 10.0], [2198.0, 20.0]]], 
 ["LFJ5", [[1512.0, 0.0], [2044.0, 22.5], [2522.0, 45.0], [3206.0, 67.5]]], 
 ["THJ3", [[2497.0, -12.0], [1672.0, 0.0], [1120.0, 12.0]]], 
