--- a/sr_hand_config/5978/calibrations/calibration.yaml
+++ b/sr_hand_config/5978/calibrations/calibration.yaml
@@ -1,3 +1,17 @@
+# Copyright 2023 Shadow Robot Company Ltd.
+#
+# This program is free software: you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by the Free
+# Software Foundation version 2 of the License.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
+# more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program. If not, see <http://www.gnu.org/licenses/>.
+
 sr_calibrations: [
 ["FFJ1", [[2986.0, 0.0], [2265.0, 22.5], [1493.0, 45.0], [852.0, 67.5], [364.0, 90.0]]], 
 ["FFJ2", [[2965.0, 0.0], [2736.0, 22.5], [2400.0, 45.0], [2033.0, 67.5], [1686.0, 90.0]]], 
