--- a/sr_hand_config/1370/controls/tactiles/sr_tactile_sensor_controller.yaml
+++ b/sr_hand_config/1370/controls/tactiles/sr_tactile_sensor_controller.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2022, 2023 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -14,5 +14,5 @@
 
 sr_rh_tactile_sensor_controller:
   type: sr_tactile_sensor_controller/SrTactileSensorController
-  publish_rate: 100
+  publish_rate: 1000
   prefix: rh
