revert some changes

--- a/sr_hand_config/1130/general_info.yaml
+++ b/sr_hand_config/1130/general_info.yaml
@@ -14,7 +14,7 @@
 
 side: 'right'
 type: 'hand_e'
-version: 'E3M5'
+version: 'E4'
 fingers: [th, ff, mf, rf, lf]
 sensors:
   tip: {th: pst, ff: pst, mf: pst, rf: pst, lf: pst}
@@ -23,4 +23,4 @@ sensors:
   palm: {}
 mapping_path:
   package_name: sr_edc_launch
-  relative_path: mappings/default_mappings/rh_E_v5.yaml
+  relative_path: mappings/default_mappings/rh_E_v3.yaml
