--- a/sr_hand_config/1370/general_info.yaml
+++ b/sr_hand_config/1370/general_info.yaml
@@ -14,7 +14,7 @@
 
 side: 'right'
 type: 'hand_e'
-version: 'E3M5'
+version: 'E4'
 fingers: [th, ff, mf, rf, lf]
 sensors:
   tip: {th: pst, ff: pst, mf: pst, rf: pst, lf: pst}
